[package]
name = "broker"
version = "4.2.5"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["sse", "api", "zero-code", "broker", "real-time"]
description = "Real-time Zero-Code API Server"
repository = "https://github.com/apibillme/broker"
homepage = "https://apibill.me"
readme = "README.md"

[dependencies]
warp = "0.2"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
json = "0.12"
sled = "0.30"
pretty_env_logger = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.6"
jsonwebtoken = "7.0.0-beta.1"
go-flag = "0.1"
envy = "0.4"
lazy_static = "1.4"
crossbeam = "0.7"
bus = "2.2"
broker-ntp = "0.0.1"
Inflector = "0.11"
json-patch = "0.2"

[dev-dependencies]
reqwest = { version = "0.10", features = ["json"] }
